# productq

./: Cargo.toml  README.md
migrations/: 01_products.sql
src/: handler.rs  main.rs  model.rs  schema.rs
