[package]
name = "search_web_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = { version = "4.3.6", features = ["dir_source"] }
actix-web = "4.3.1"
serde_json = "1.0.96"
serde = { version="1.0.162", features = ["derive"] }
actix-files = "0.6.2"
tokio = { version = "1.28.1", features = ["full"]}
sqlx = { version ="0.6.3", features = ["postgres", "runtime-tokio-rustls", "json", "uuid", "chrono"]}
uuid = { version = "1.3.3", features = ["v4","fast-rng","macro-diagnostics", "serde"] }
chrono = {version = "0.4.24" , features = ["serde"] }
env_logger = "0.10.0"
dotenv = "0.15.0"